# api/v1/handlers.go
@@ -5,19 +5,22 @@ import (
 
 	httpSwagger "github.com/swaggo/http-swagger"
 
-	"github.com/GoogleCloudPlatform/golang-samples/run/helloworld/crud"
+	"noble-group-services/crud"
 )
 
 // SetupRoutes sets up the API routes.
 // It accepts a mux to register handlers.
 func SetupRoutes(mux *http.ServeMux) {
-	mux.HandleFunc("/api/v1/products", crud.ProductsHandler)
-	mux.HandleFunc("/api/v1/products/categories", crud.CategoriesHandler)
-	mux.HandleFunc("/api/v1/products/manufacturers", crud.ManufacturersHandler)
-	mux.HandleFunc("/api/v1/products/", crud.ProductByIDHandler)
-	mux.HandleFunc("/api/v1/cart", crud.CartHandler)
-	mux.HandleFunc("/api/v1/cart/", crud.CartItemHandler)
-	mux.HandleFunc("/api/v1/orders", crud.OrdersHandler)
+	mux.HandleFunc("/products", crud.ProductsHandler)
+	mux.HandleFunc("/products/categories", crud.CategoriesHandler)
+	mux.HandleFunc("/products/categories/", crud.CategoryItemHandler)
+	mux.HandleFunc("/products/manufacturers", crud.ManufacturersHandler)
+	mux.HandleFunc("/products/manufacturers/", crud.ManufacturerItemHandler)
+	mux.HandleFunc("/products/", crud.ProductItemHandler)
+	mux.HandleFunc("/cart", crud.CartHandler)
+	mux.HandleFunc("/cart/", crud.CartItemHandler)
+	mux.HandleFunc("/orders", crud.OrdersHandler)
+	mux.HandleFunc("/orders/", crud.OrderItemHandler)
 
 	// Swagger documentation
 	mux.HandleFunc("/swagger/", httpSwagger.WrapHandler)
