# docs/swagger.yaml
@@ -1,7 +1,9 @@
+basePath: /
 definitions:
   crud.CartResponse:
     properties:
       count:
+        description: ← теперь общее количество товаров!
         type: integer
       items:
         items:
@@ -31,6 +33,8 @@ definitions:
       availability:
         type: string
       category:
+        $ref: '#/definitions/models.Category'
+      categoryId:
         type: string
       description:
         type: string
@@ -41,8 +45,12 @@ definitions:
       id:
         type: string
       image:
-        type: string
+        items:
+          type: string
+        type: array
       manufacturer:
+        $ref: '#/definitions/models.Manufacturer'
+      manufacturerId:
         type: string
       name:
         type: string
@@ -58,8 +66,23 @@ definitions:
         type: integer
       sku:
         type: string
+      slug:
+        type: string
       stock:
         type: integer
+    type: object
+  models.Category:
+    properties:
+      id:
+        type: string
+      image:
+        type: string
+      name:
+        type: string
+      parentId:
+        type: string
+      slug:
+        type: string
     type: object
   models.CheckoutForm:
     properties:
@@ -80,11 +103,24 @@ definitions:
       phone:
         type: string
     type: object
+  models.Manufacturer:
+    properties:
+      id:
+        type: string
+      logo:
+        type: string
+      name:
+        type: string
+      slug:
+        type: string
+    type: object
   models.Product:
     properties:
       availability:
         type: string
       category:
+        $ref: '#/definitions/models.Category'
+      categoryId:
         type: string
       description:
         type: string
@@ -95,8 +131,12 @@ definitions:
       id:
         type: string
       image:
-        type: string
+        items:
+          type: string
+        type: array
       manufacturer:
+        $ref: '#/definitions/models.Manufacturer'
+      manufacturerId:
         type: string
       name:
         type: string
@@ -110,28 +150,33 @@ definitions:
         type: integer
       sku:
         type: string
+      slug:
+        type: string
       stock:
         type: integer
     type: object
+host: localhost:8080
 info:
-  contact: {}
+  contact:
+    email: support@swagger.io
+    name: API Support
+    url: http://www.swagger.io/support
+  description: API for Noble Group Services e-commerce platform.
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
+  termsOfService: http://swagger.io/terms/
+  title: Noble Group Services API
+  version: "1.0"
 paths:
   /cart:
     delete:
-      consumes:
-      - application/json
-      description: Get the current cart, add an item, or clear the cart.
+      description: Remove all items from the cart
       parameters:
-      - description: Add to cart request
-        in: body
-        name: body
-        schema:
-          properties:
-            productId:
-              type: string
-            quantity:
-              type: integer
-          type: object
+      - description: Session ID
+        in: header
+        name: X-Session-ID
+        type: string
       produces:
       - application/json
       responses:
@@ -139,32 +184,16 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/crud.CartResponse'
-        "400":
-          description: Bad Request
-          schema:
-            type: string
-        "404":
-          description: Not Found
-          schema:
-            type: string
-      summary: Get or update the cart
+      summary: Clear cart
       tags:
       - cart
     get:
-      consumes:
-      - application/json
-      description: Get the current cart, add an item, or clear the cart.
+      description: Get the current session's cart
       parameters:
-      - description: Add to cart request
-        in: body
-        name: body
-        schema:
-          properties:
-            productId:
-              type: string
-            quantity:
-              type: integer
-          type: object
+      - description: Session ID
+        in: header
+        name: X-Session-ID
+        type: string
       produces:
       - application/json
       responses:
@@ -172,25 +201,22 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/crud.CartResponse'
-        "400":
-          description: Bad Request
-          schema:
-            type: string
-        "404":
-          description: Not Found
-          schema:
-            type: string
-      summary: Get or update the cart
+      summary: Get current cart
       tags:
       - cart
     post:
       consumes:
       - application/json
-      description: Get the current cart, add an item, or clear the cart.
+      description: Add a product to the cart
       parameters:
-      - description: Add to cart request
+      - description: Session ID
+        in: header
+        name: X-Session-ID
+        type: string
+      - description: Product ID and Quantity
         in: body
-        name: body
+        name: request
+        required: true
         schema:
           properties:
             productId:
@@ -206,35 +232,29 @@ paths:
           schema:
             $ref: '#/definitions/crud.CartResponse'
         "400":
-          description: Bad Request
+          description: Invalid request
           schema:
             type: string
         "404":
-          description: Not Found
+          description: Product not found
           schema:
             type: string
-      summary: Get or update the cart
+      summary: Add item to cart
       tags:
       - cart
-  /cart/{productId}:
+  /cart/{id}:
     delete:
-      consumes:
-      - application/json
-      description: Update the quantity of an item or delete it from the cart
+      description: Remove a product from the cart
       parameters:
+      - description: Session ID
+        in: header
+        name: X-Session-ID
+        type: string
       - description: Product ID
         in: path
-        name: productId
+        name: id
         required: true
         type: string
-      - description: Update quantity request
-        in: body
-        name: body
-        schema:
-          properties:
-            quantity:
-              type: integer
-          type: object
       produces:
       - application/json
       responses:
@@ -242,30 +262,31 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/crud.CartResponse'
-        "400":
-          description: Bad Request
-          schema:
-            type: string
         "404":
-          description: Not Found
+          description: Item not found
           schema:
             type: string
-      summary: Update or delete an item in the cart
+      summary: Remove item from cart
       tags:
       - cart
     patch:
       consumes:
       - application/json
-      description: Update the quantity of an item or delete it from the cart
+      description: Update the quantity of a product in the cart
       parameters:
+      - description: Session ID
+        in: header
+        name: X-Session-ID
+        type: string
       - description: Product ID
         in: path
-        name: productId
+        name: id
         required: true
         type: string
-      - description: Update quantity request
+      - description: New Quantity
         in: body
-        name: body
+        name: request
+        required: true
         schema:
           properties:
             quantity:
@@ -279,14 +300,14 @@ paths:
           schema:
             $ref: '#/definitions/crud.CartResponse'
         "400":
-          description: Bad Request
+          description: Invalid request
           schema:
             type: string
         "404":
-          description: Not Found
+          description: Item not found
           schema:
             type: string
-      summary: Update or delete an item in the cart
+      summary: Update cart item quantity
       tags:
       - cart
   /orders:
@@ -316,33 +337,56 @@ paths:
       summary: Place a new order
       tags:
       - orders
+  /orders/{id}:
+    delete:
+      description: Delete an order by ID
+      parameters:
+      - description: Order ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+          schema:
+            type: string
+        "404":
+          description: Order not found
+          schema:
+            type: string
+      summary: Delete order
+      tags:
+      - orders
   /products:
     get:
-      consumes:
-      - application/json
-      description: Get a list of products with optional filters
+      description: Get a list of products with optional filtering
       parameters:
-      - description: Category to filter by
+      - description: Category Slug
         in: query
         name: category
         type: string
-      - description: Manufacturer to filter by
+      - description: Manufacturer Slug
         in: query
         name: manufacturer
         type: string
-      - description: Search term to filter by name
+      - description: Search term
         in: query
         name: search
         type: string
-      - description: Filter for products in stock only
+      - description: Only in stock
         in: query
         name: inStockOnly
         type: boolean
-      - description: Page number for pagination
+      - default: 1
+        description: Page number
         in: query
         name: page
         type: integer
-      - description: Number of items per page
+      - default: 20
+        description: Items per page
         in: query
         name: limit
         type: integer
@@ -355,14 +399,59 @@ paths:
             items:
               $ref: '#/definitions/models.Product'
             type: array
-      summary: Get a list of products
+      summary: Get list of products
+      tags:
+      - products
+    post:
+      consumes:
+      - application/json
+      description: Create a new product
+      parameters:
+      - description: Product
+        in: body
+        name: product
+        required: true
+        schema:
+          $ref: '#/definitions/models.Product'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.Product'
+        "400":
+          description: Invalid request
+          schema:
+            type: string
+      summary: Create a product
       tags:
       - products
   /products/{id}:
-    get:
-      consumes:
+    delete:
+      description: Delete a product
+      parameters:
+      - description: Product ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
       - application/json
-      description: Get a single product by its ID
+      responses:
+        "204":
+          description: No Content
+          schema:
+            type: string
+        "404":
+          description: Product not found
+          schema:
+            type: string
+      summary: Delete product
+      tags:
+      - products
+    get:
+      description: Get details of a specific product
       parameters:
       - description: Product ID
         in: path
@@ -377,44 +466,282 @@ paths:
           schema:
             $ref: '#/definitions/models.Product'
         "404":
-          description: Not Found
+          description: Product not found
           schema:
             type: string
-      summary: Get a single product by its ID
+      summary: Get product by ID
+      tags:
+      - products
+    put:
+      consumes:
+      - application/json
+      description: Update an existing product
+      parameters:
+      - description: Product ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Product
+        in: body
+        name: product
+        required: true
+        schema:
+          $ref: '#/definitions/models.Product'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Product'
+        "400":
+          description: Invalid request
+          schema:
+            type: string
+        "404":
+          description: Product not found
+          schema:
+            type: string
+      summary: Update product
       tags:
       - products
   /products/categories:
     get:
-      description: Get a list of all available product categories
+      description: Get a list of all product categories
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            additionalProperties:
-              items:
-                type: string
-              type: array
-            type: object
-      summary: Get a list of product categories
+            items:
+              $ref: '#/definitions/models.Category'
+            type: array
+      summary: Get all categories
       tags:
-      - products
+      - categories
+    post:
+      consumes:
+      - application/json
+      description: Create a new product category
+      parameters:
+      - description: Category
+        in: body
+        name: category
+        required: true
+        schema:
+          $ref: '#/definitions/models.Category'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.Category'
+        "400":
+          description: Invalid request
+          schema:
+            type: string
+      summary: Create a category
+      tags:
+      - categories
+  /products/categories/{id}:
+    delete:
+      description: Delete a category
+      parameters:
+      - description: Category ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+          schema:
+            type: string
+        "404":
+          description: Category not found
+          schema:
+            type: string
+      summary: Delete category
+      tags:
+      - categories
+    get:
+      description: Get details of a specific category
+      parameters:
+      - description: Category ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Category'
+        "404":
+          description: Category not found
+          schema:
+            type: string
+      summary: Get category by ID
+      tags:
+      - categories
+    put:
+      consumes:
+      - application/json
+      description: Update an existing category
+      parameters:
+      - description: Category ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Category
+        in: body
+        name: category
+        required: true
+        schema:
+          $ref: '#/definitions/models.Category'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Category'
+        "400":
+          description: Invalid request
+          schema:
+            type: string
+        "404":
+          description: Category not found
+          schema:
+            type: string
+      summary: Update category
+      tags:
+      - categories
   /products/manufacturers:
     get:
-      description: Get a list of all available product manufacturers
+      description: Get a list of all manufacturers
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            additionalProperties:
-              items:
-                type: string
-              type: array
-            type: object
-      summary: Get a list of product manufacturers
+            items:
+              $ref: '#/definitions/models.Manufacturer'
+            type: array
+      summary: Get all manufacturers
       tags:
-      - products
+      - manufacturers
+    post:
+      consumes:
+      - application/json
+      description: Create a new manufacturer
+      parameters:
+      - description: Manufacturer
+        in: body
+        name: manufacturer
+        required: true
+        schema:
+          $ref: '#/definitions/models.Manufacturer'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.Manufacturer'
+        "400":
+          description: Invalid request
+          schema:
+            type: string
+      summary: Create a manufacturer
+      tags:
+      - manufacturers
+  /products/manufacturers/{id}:
+    delete:
+      description: Delete a manufacturer
+      parameters:
+      - description: Manufacturer ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+          schema:
+            type: string
+        "404":
+          description: Manufacturer not found
+          schema:
+            type: string
+      summary: Delete manufacturer
+      tags:
+      - manufacturers
+    get:
+      description: Get details of a specific manufacturer
+      parameters:
+      - description: Manufacturer ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Manufacturer'
+        "404":
+          description: Manufacturer not found
+          schema:
+            type: string
+      summary: Get manufacturer by ID
+      tags:
+      - manufacturers
+    put:
+      consumes:
+      - application/json
+      description: Update an existing manufacturer
+      parameters:
+      - description: Manufacturer ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Manufacturer
+        in: body
+        name: manufacturer
+        required: true
+        schema:
+          $ref: '#/definitions/models.Manufacturer'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Manufacturer'
+        "400":
+          description: Invalid request
+          schema:
+            type: string
+        "404":
+          description: Manufacturer not found
+          schema:
+            type: string
+      summary: Update manufacturer
+      tags:
+      - manufacturers
 swagger: "2.0"
